Verion 1.0.1 BETA finished.

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -22,9 +22,9 @@
     <ContentPage.Content>
         <StackLayout>
 
-            <FlexLayout Direction="Column">
+            <FlexLayout AlignContent="Center" Direction="Column">
 
-                <Grid FlexLayout.AlignSelf="Start">
+                <Grid CompressedLayout.IsHeadless="True" FlexLayout.AlignSelf="Start">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
