FIX: Bug in the search page at the moment of select the result..

--- a/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
@@ -101,7 +101,7 @@
                                                 WidthRequest="300" />
                                         </AbsoluteLayout>
                                     </StackLayout>
-                                    <StackLayout CompressedLayout.IsHeadless="True">
+                                    <StackLayout>
                                         <Frame HorizontalOptions="Center" Style="{StaticResource StackUnderImageStyle}">
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
