--- a/SSFR_Movies/SSFR_Movies/ResourceDictionaries/GenResourceDictionary.xaml
+++ b/SSFR_Movies/SSFR_Movies/ResourceDictionaries/GenResourceDictionary.xaml
@@ -8,6 +8,7 @@
     <Style x:Key="FramesStyle" TargetType="Frame">
         <Setter Property="BackgroundColor" Value="#0088FF" />
         <Setter Property="CornerRadius" Value="23" />
+        <Setter Property="HasShadow" Value="True" />
         <Setter Property="WidthRequest" Value="95" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="Margin" Value="0,0,18,0" />
@@ -53,7 +54,7 @@
     </Style>
     <!--  Style StackLayout under Card image AllMoviesMape  -->
     <Style x:Key="StackUnderImageStyle" TargetType="Frame">
-        <Setter Property="BackgroundColor" Value="#312D2D" />
+        <Setter Property="BackgroundColor" Value="#44312D2D" />
         <Setter Property="CornerRadius" Value="5" />
         <!--<Setter Property="HeightRequest" Value="50" />-->
         <!--<Setter Property="WidthRequest" Value="323" />-->
