Feat: Tap to the star to add movie to the Favorite List. Refactor: Some Changes.

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -300,7 +300,11 @@
                 VerticalOptions="FillAndExpand">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <customViewCell:CustomViewCell />
+                        <customViewCell:CustomViewCell>
+
+                            <!--    -->
+
+                        </customViewCell:CustomViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
