--- a/SSFR_Movies/SSFR_Movies/Views/About.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/About.xaml
@@ -22,7 +22,7 @@
                         FontSize="Large"
                         HorizontalOptions="CenterAndExpand"
                         HorizontalTextAlignment="Center"
-                        Text="SSFR Movies 1.0.1 BETA"
+                        Text="SSFR Movies 1.0.2"
                         TextColor="White" />
 
                     <StackLayout
