--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -4,8 +4,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:customViewCell="clr-namespace:SSFR_Movies.Helpers"
-    xmlns:customrenderers="clr-namespace:SSFR_Movies.CustomRenderers"
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+    xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
     Title="SSFR Movies Home"
     BackgroundColor="#161513">
 
@@ -300,23 +300,15 @@
                 VerticalOptions="FillAndExpand">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <customViewCell:CustomViewCell>
+                        <helpers:CustomViewCell>
 
                             <!--    -->
 
-                        </customViewCell:CustomViewCell>
+                        </helpers:CustomViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
 
-            <!--<ActivityIndicator
-                x:Name="activityIndicator"
-                BackgroundColor="Transparent"
-                HorizontalOptions="FillAndExpand"
-                IsEnabled="{Binding IsEnabled}"
-                IsRunning="{Binding IsRunning}"
-                VerticalOptions="FillAndExpand"
-                Color="#0088FF" />-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
