--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+    xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
     Title="Details"
     BackgroundColor="#006FDE">
 
@@ -205,6 +206,8 @@
                                 TextColor="White" />
                         </StackLayout>
                     </StackLayout>
+                    <!--<helpers:AdMobView AdUnitId="ca-app-pub-3940256099942544/6300978111" />-->
+                    <helpers:AdMobView AdUnitId="ca-app-pub-7678114811413714/1246889210" />
                 </StackLayout>
             </ScrollView>
         </FlexLayout>
