VNext: 1.0.3 -> Feat: Now infinite text motion animation in the Title label of a movie result. Refactor: now Favorite Movie star notification  consume less processing, and enabled again..

--- a/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
@@ -122,6 +122,7 @@
                                                     Orientation="Horizontal"
                                                     VerticalScrollBarVisibility="Never">
                                                     <Label
+                                                        x:Name="title"
                                                         LineBreakMode="TailTruncation"
                                                         Style="{StaticResource TitleStyle}"
                                                         Text="{Binding Title}" />
