Refactor: Some changes.. (BindingContext set to null at the moment of pushing NavigationPage(MovieDetailsPage) on CustomViewCell)

--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -93,7 +93,7 @@
                                         VerticalOptions="End">
                                         <ScrollView
                                             x:Name="ScrollTitle"
-                                            HorizontalOptions="End"
+                                            HorizontalOptions="FillAndExpand"
                                             HorizontalScrollBarVisibility="Never"
                                             Orientation="Horizontal"
                                             VerticalScrollBarVisibility="Never">
