Feat: Done. Theres's a lack of compatibility with Xamarin.Essentials, but its priority in not relevant at the moment. Fix: Some minor Warnings fixed.

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -275,7 +275,7 @@
                 Source="NoInternet.png"
                 WidthRequest="300" />
 
-            <Label
+             <Label
                 x:Name="Message"
                 Margin="0,5,0,0"
                 FontAttributes="Bold"
@@ -283,7 +283,7 @@
                 HorizontalOptions="Center"
                 HorizontalTextAlignment="Center"
                 IsVisible="{Binding MsgVisible}"
-                Text="It seems like you don't have an internet connection!"
+                Text="{Binding MsgText}"
                 TextColor="White" />
 
             <ActivityIndicator
