--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -6,7 +6,8 @@
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
     Title="SSFR Movies Home"
-    BackgroundColor="#161513">
+    BackgroundColor="#161513"
+    >
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -77,7 +78,7 @@
                                 </Label>
 
                             </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
+                            <Fra me Style="{StaticResource FramesStyle}">
 
                                 <Label
                                     FontAttributes="Bold"
@@ -88,7 +89,7 @@
                                     </Label.GestureRecognizers>
                                 </Label>
 
-                            </Frame>
+                            </Fra>
                             <Frame Style="{StaticResource FramesStyle}">
 
                                 <Label
@@ -296,7 +297,115 @@
                 WidthRequest="50"
                 Color="#FFF" />
 
-            <ListView
+            <CollectionView x:Name="MoviesList" ItemsSource="{Binding AllMoviesList}" Visual="Material" >
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                       
+                        <!--<helpers:CustomViewCell>
+
+                        </helpers:CustomViewCell>-->
+                        <FlexLayout
+                            HeightRequest="350"
+                                Margin="16"
+                                AlignContent="Center"
+                                Direction="Column">
+                            <StackLayout
+                                    CompressedLayout.IsHeadless="True"
+                                    HorizontalOptions="Center"
+                                    VerticalOptions="FillAndExpand">
+                                <StackLayout
+                                        Margin="16,0,16,0"
+                                        HeightRequest="280"
+                                        HorizontalOptions="FillAndExpand"
+                                        VerticalOptions="FillAndExpand">
+                                    <AbsoluteLayout
+                                            AbsoluteLayout.LayoutBounds="0,0, 1,1"
+                                            AbsoluteLayout.LayoutFlags="All"
+                                            CompressedLayout.IsHeadless="True"
+                                            VerticalOptions="FillAndExpand">
+                                        <ffimage:CachedImage
+                                                AbsoluteLayout.LayoutBounds="0.5,0,1,1"
+                                                AbsoluteLayout.LayoutFlags="All"
+                                                BitmapOptimizations="True"
+                                                DownsampleToViewSize="False"
+                                                HeightRequest="280"
+                                                HorizontalOptions="FillAndExpand"
+                                                Scale="2"
+                                                Source="{Binding PosterPath}"
+                                                VerticalOptions="FillAndExpand"
+                                                WidthRequest="280">
+                                            <ffimage:CachedImage.Transformations>
+                                                <fftransformations:BlurredTransformation Radius="60" />
+                                            </ffimage:CachedImage.Transformations>
+                                        </ffimage:CachedImage>
+                                        <ffimage:CachedImage
+                                                AbsoluteLayout.LayoutBounds="0.5,0,1,1"
+                                                AbsoluteLayout.LayoutFlags="All"
+                                                BitmapOptimizations="True"
+                                                DownsampleToViewSize="False"
+                                                HeightRequest="280"
+                                                HorizontalOptions="Center"
+                                                Source="{Binding PosterPath}"
+                                                Style="{StaticResource ImageInsideCardStyle}"
+                                                WidthRequest="280" />
+                                    </AbsoluteLayout>
+                                </StackLayout>
+                                <StackLayout HeightRequest="100" HorizontalOptions="Center">
+                                    <Frame HorizontalOptions="Center" Style="{StaticResource StackUnderImageStyle}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*" />
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="*" />
+                                            </Grid.RowDefinitions>
+                                            <ScrollView
+                                                    x:Name="ScrollTitle"
+                                                    Grid.Row="0"
+                                                    Grid.Column="0"
+                                                    Grid.ColumnSpan="2"
+                                                    HorizontalScrollBarVisibility="Never"
+                                                    Orientation="Horizontal"
+                                                    VerticalScrollBarVisibility="Never">
+                                                <Label
+                                                        x:Name="title"
+                                                        LineBreakMode="TailTruncation"
+                                                        Style="{StaticResource TitleStyle}"
+                                                        Text="{Binding Title}" />
+                                            </ScrollView>
+                                            <Label
+                                                    Grid.Row="1"
+                                                    Grid.Column="0"
+                                                    Style="{StaticResource DateStyle}"
+                                                    Text="{Binding ReleaseDate}" />
+                                            <StackLayout
+                                                    Grid.Row="0"
+                                                    Grid.RowSpan="2"
+                                                    Grid.Column="2"
+                                                    CompressedLayout.IsHeadless="True"
+                                                    HeightRequest="50">
+                                                <Image
+                                                        x:Name="Pin"
+                                                        Margin="0,0,16,0"
+                                                        HeightRequest="34"
+                                                        HorizontalOptions="End"
+                                                        Source="Star.png"
+                                                        WidthRequest="35" />
+                                                <Label Style="{StaticResource UnPinStyle}" Text="Push/Hold down to delete." />
+                                            </StackLayout>
+                                        </Grid>
+                                    </Frame>
+                                </StackLayout>
+                            </StackLayout>
+                        </FlexLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>    
+
+            <!--<ListView
                 x:Name="MoviesList"
                 CachingStrategy="RecycleElementAndDataTemplate"
                 HasUnevenRows="True"
@@ -312,12 +421,12 @@
                     <DataTemplate>
                         <helpers:CustomViewCell>
 
-                            <!--    -->
+                            --><!--    --><!--
 
                         </helpers:CustomViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-            </ListView>
+            </ListView>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
