Refactor: CustomViewCell refactored.. Refactor: Extension SetAnimation(this Label lbl) has changed to a non-async state. Refactor: [AllMoviesPage.xaml] StackLayout inside of the CollectionView Compressed. Refactor: [AllMoviesPage.cs] Initialize Message removed.. Refactor: Some minor changes..

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -299,7 +299,7 @@
             <CollectionView x:Name="MoviesList" ItemsSource="{Binding AllMoviesList}" Visual="Material" WidthRequest="{Binding Source={x:Reference Content}, Path= WidthRequest}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <StackLayout>
+                        <StackLayout CompressedLayout.IsHeadless="True">
                             <helpers:CustomViewCell HeightRequest="350"/>
                         </StackLayout>
                     </DataTemplate>
